@@ -12,6 +12,8 @@
    since they're not useful right now.  Patch from djm@.
  - (dtucker) [openbsd-compat/getgrouplist.c] Sync OpenBSD revs 1.10 - 1.2 (ANSI
    prototypes, removal of "register").
+ - (dtucker) [openbsd-compat/strlcat.c] Sync OpenBSD revs 1.11 - 1.12 (removal
+   of "register").
 
 20051105
  - (djm) OpenBSD CVS Sync
@@ -3254,4 +3256,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3960 2005/11/10 04:56:44 dtucker Exp $
+$Id: ChangeLog,v 1.3961 2005/11/10 05:05:37 dtucker Exp $
